# Fast Qt Test unit tests. Each is a standalone executable registered with CTest.

function(olr_add_unit_test name)
    qt_add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE Qt6::Test ${ARGN} olr_warnings olr_sanitize)
    add_test(NAME ${name} COMMAND ${name})
    # Headless + deterministic; fail fast rather than hang CI.
    set_tests_properties(${name} PROPERTIES
        LABELS "unit;ci"
        TIMEOUT 60
        ENVIRONMENT "QT_QPA_PLATFORM=offscreen")
endfunction()

olr_add_unit_test(tst_recordingclock   olr_test_core)
olr_add_unit_test(tst_heartbeat        olr_test_core)
olr_add_unit_test(tst_driftestimator   olr_test_core)
olr_add_unit_test(tst_timecode         olr_test_core)
olr_add_unit_test(tst_smpte12m         olr_test_core)
olr_add_unit_test(tst_timecodealigner  olr_test_core)
olr_add_unit_test(tst_sourceoffsetestimator olr_test_core)
olr_add_unit_test(tst_sourceclock      olr_test_core)
olr_add_unit_test(tst_timingreference  olr_test_core)
olr_add_unit_test(tst_ptpservo         olr_test_core)
olr_add_unit_test(tst_ptpreference     olr_test_core)
olr_add_unit_test(tst_udpptpclient     olr_test_core)
olr_add_unit_test(tst_controlprotocol  olr_test_core)
olr_add_unit_test(tst_controlwebsocketserver olr_test_core)
olr_add_unit_test(tst_controlstate    olr_test_core)
olr_add_unit_test(tst_settingsmanager  olr_test_core)
olr_add_unit_test(tst_projectsettingsimporter olr_test_core)
olr_add_unit_test(tst_playbacktransport olr_test_core)
olr_add_unit_test(tst_sseparser olr_test_core)
olr_add_unit_test(tst_telemetryclient olr_test_core)
olr_add_unit_test(tst_muxer            olr_test_engine)
# Exercises NativeSrtIngestSession, which is compiled only on Apple/Windows
# (Linux uses the ingest stubs), so these tests are platform-gated.
if(APPLE OR WIN32)
    olr_add_unit_test(tst_ingestbackendselector olr_test_core)
    # Drives a real loopback SRT connection through NativeSrtIngestSession::run()
    # and requestStop() concurrently; the threading regression it guards is caught
    # under TSan (registered as a TSan target in .githooks/pre-push and CI).
    olr_add_unit_test(tst_srtingest_teardown olr_test_engine)
endif()
olr_add_unit_test(tst_mpegtsparser     olr_test_core)
olr_add_unit_test(tst_mpegtsparser_pcr olr_test_core)
olr_add_unit_test(tst_h26xaccessunit   olr_test_core)
olr_add_unit_test(tst_colorvui olr_test_core)
if(APPLE)
    olr_add_unit_test(tst_colortags_apple olr_test_core)
    add_library(olr_test_colortags_apple STATIC
        "${CMAKE_SOURCE_DIR}/recorder_engine/ingest/colortags_apple.mm")
    target_include_directories(olr_test_colortags_apple PRIVATE "${CMAKE_SOURCE_DIR}")
    target_link_libraries(olr_test_colortags_apple
        PUBLIC Qt6::Core olr_test_core "-framework CoreMedia" "-framework CoreFoundation"
               "-framework CoreVideo")
    target_link_libraries(tst_colortags_apple PRIVATE olr_test_colortags_apple)
endif()
olr_add_unit_test(tst_h26xseitimecode  olr_test_engine)
olr_add_unit_test(tst_nativesrtaddress olr_test_core)
olr_add_unit_test(tst_nativevideodecoder olr_test_core)
olr_add_unit_test(tst_nativeframecopy olr_test_core)
olr_add_unit_test(tst_ndiframeconvert olr_test_engine)
olr_add_unit_test(tst_ndiingest       olr_test_engine)
olr_add_unit_test(tst_ndimarkerpattern olr_test_core)
target_sources(tst_ndimarkerpattern PRIVATE
    "${CMAKE_SOURCE_DIR}/tests/e2e/ndi_marker_pattern.cpp")
olr_add_unit_test(tst_ndioutputmarker)
target_sources(tst_ndioutputmarker PRIVATE "${CMAKE_SOURCE_DIR}/tests/e2e/ndi_output_marker.cpp")
target_include_directories(tst_ndioutputmarker PRIVATE "${CMAKE_SOURCE_DIR}")
olr_add_unit_test(tst_ndirecvanalysis)
target_sources(tst_ndirecvanalysis PRIVATE "${CMAKE_SOURCE_DIR}/tests/e2e/ndi_recv_analysis.cpp")
target_include_directories(tst_ndirecvanalysis PRIVATE "${CMAKE_SOURCE_DIR}")
olr_add_unit_test(tst_rtmpprotocol     olr_test_core)
if(APPLE)
    add_library(olr_test_nativevideodecoder STATIC
        "${CMAKE_SOURCE_DIR}/recorder_engine/ingest/nativevideodecoder_videotoolbox.mm")
    target_include_directories(olr_test_nativevideodecoder PRIVATE "${OLR_FFMPEG_INCLUDE}")
    target_link_directories(olr_test_nativevideodecoder PUBLIC "${OLR_FFMPEG_LIBDIR}")
    target_link_libraries(olr_test_nativevideodecoder
        PUBLIC Qt6::Core avutil "-framework VideoToolbox" "-framework CoreMedia"
                "-framework CoreFoundation" "-framework CoreVideo")
    target_link_libraries(tst_nativevideodecoder PRIVATE olr_test_nativevideodecoder)
elseif(WIN32)
    add_library(olr_test_nativevideodecoder STATIC
        "${CMAKE_SOURCE_DIR}/recorder_engine/ingest/nativevideodecoder_mediafoundation.cpp")
    target_include_directories(olr_test_nativevideodecoder PRIVATE "${OLR_FFMPEG_INCLUDE}")
    target_link_libraries(olr_test_nativevideodecoder
        PUBLIC Qt6::Core olr_test_core
        PRIVATE mfplat mf mfuuid d3d11 dxgi ole32)
    target_link_libraries(tst_nativevideodecoder PRIVATE olr_test_nativevideodecoder)
elseif(NOT WIN32)
    add_library(olr_test_nativevideodecoder STATIC
        "${CMAKE_SOURCE_DIR}/recorder_engine/ingest/nativevideodecoder_stub.cpp")
    target_link_libraries(olr_test_nativevideodecoder PUBLIC Qt6::Core)
    target_link_libraries(tst_nativevideodecoder PRIVATE olr_test_nativevideodecoder)
endif()
olr_add_unit_test(tst_wingpuimportedge olr_test_playback)
if(WIN32)
    add_library(olr_test_wingpuimport INTERFACE)
    target_link_libraries(olr_test_wingpuimport INTERFACE olr_test_playback)
    target_link_libraries(tst_wingpuimportedge PRIVATE olr_test_wingpuimport)
else()
    add_library(olr_test_wingpuimport STATIC
        "${CMAKE_SOURCE_DIR}/playback/output/win/wingpuimportedge_stub.cpp")
    target_include_directories(olr_test_wingpuimport PRIVATE "${CMAKE_SOURCE_DIR}")
    target_link_libraries(olr_test_wingpuimport PUBLIC Qt6::Core)
    target_link_libraries(tst_wingpuimportedge PRIVATE olr_test_wingpuimport)
endif()
olr_add_unit_test(tst_nativeaacdecoder olr_test_core)
olr_add_unit_test(tst_telemetrytimelinereader olr_test_engine olr_test_playback)
olr_add_unit_test(tst_replaymanager_telemetry olr_test_engine olr_test_playback)
olr_add_unit_test(tst_replaymanager_timecode olr_test_engine)
olr_add_unit_test(tst_trackbuffer      olr_test_playback)
olr_add_unit_test(tst_audioframequeue  olr_test_playback)
olr_add_unit_test(tst_outputframeclock olr_test_playback)
olr_add_unit_test(tst_outputframecache olr_test_playback)
olr_add_unit_test(tst_outputtargetassignment olr_test_playback)
olr_add_unit_test(tst_broadcastoutputsettings olr_test_core)
olr_add_unit_test(tst_outputbusengine olr_test_playback)
olr_add_unit_test(tst_framehandle olr_test_playback)
olr_add_unit_test(tst_gpusurface olr_test_playback)
olr_add_unit_test(tst_yuv420pcompositor olr_test_playback)
olr_add_unit_test(tst_formatcanon olr_test_playback)
olr_add_unit_test(tst_qtpreviewsink olr_test_playback)
olr_add_unit_test(tst_colormetadatapolicy olr_test_playback)
olr_add_unit_test(tst_colormetadataplumb olr_test_playback)
olr_add_unit_test(tst_outputdispatcher olr_test_playback)
olr_add_unit_test(tst_outputdispatcher_holdlast olr_test_playback)
olr_add_unit_test(tst_gpureadbacktelemetry olr_test_playback)
olr_add_unit_test(tst_outputdispatch_gpustats olr_test_playback)
olr_add_unit_test(tst_outputruntime olr_test_playback)
olr_add_unit_test(tst_queuedoutputsink olr_test_playback)
olr_add_unit_test(tst_ndisink olr_test_playback)
olr_add_unit_test(tst_commitgate olr_test_playback)
olr_add_unit_test(tst_sharedcacheslot olr_test_playback)
olr_add_unit_test(tst_frameindex olr_test_playback)
olr_add_unit_test(tst_replayplaylist olr_test_playback)
olr_add_unit_test(tst_cutschedule olr_test_playback)
olr_add_unit_test(tst_playlistplayout olr_test_playback)
olr_add_unit_test(tst_seekcoalescer olr_test_playback)
olr_add_unit_test(tst_audioplayer_mutefade olr_test_playback)
qt_add_executable(tst_ndi_runtime_smoke tst_ndi_runtime_smoke.cpp)
target_link_libraries(tst_ndi_runtime_smoke PRIVATE Qt6::Test olr_test_playback olr_warnings olr_sanitize)
add_test(NAME tst_ndi_runtime_smoke COMMAND tst_ndi_runtime_smoke)
set_tests_properties(tst_ndi_runtime_smoke PROPERTIES
    LABELS "ndi-runtime"
    TIMEOUT 420
    ENVIRONMENT "QT_QPA_PLATFORM=offscreen;QTEST_FUNCTION_TIMEOUT=420000")
olr_add_unit_test(tst_streamdeckmappingstore olr_test_core)
olr_add_unit_test(tst_srt_health olr_test_core)
olr_add_unit_test(tst_rtmp_health      olr_test_core)
olr_add_unit_test(tst_videocodecchoice)
# Header-only test: no olr_test_core link, so add the project root include manually.
target_include_directories(tst_videocodecchoice PRIVATE "${CMAKE_SOURCE_DIR}")
olr_add_unit_test(tst_avcc olr_test_engine)
olr_add_unit_test(tst_benchmarkplan olr_test_engine)
olr_add_unit_test(tst_codecbenchmark olr_test_engine)
olr_add_unit_test(tst_nativevideoencoder olr_test_engine)
if(APPLE)
    add_library(olr_test_nativevideoencoder STATIC
        "${CMAKE_SOURCE_DIR}/recorder_engine/codec/nativevideoencoder_videotoolbox.mm")
    target_include_directories(olr_test_nativevideoencoder PRIVATE "${CMAKE_SOURCE_DIR}" "${OLR_FFMPEG_INCLUDE}")
    target_link_directories(olr_test_nativevideoencoder PUBLIC "${OLR_FFMPEG_LIBDIR}")
    target_link_libraries(olr_test_nativevideoencoder
        PUBLIC Qt6::Core olr_test_engine
        PRIVATE "${OLR_FFMPEG_AVUTIL_LIBRARY}" "-framework VideoToolbox" "-framework CoreMedia"
                "-framework CoreFoundation" "-framework CoreVideo")
    target_link_libraries(tst_nativevideoencoder PRIVATE olr_test_nativevideoencoder)
elseif(WIN32)
    add_library(olr_test_nativevideoencoder STATIC
        "${CMAKE_SOURCE_DIR}/recorder_engine/codec/nativevideoencoder_mediafoundation.cpp")
    target_include_directories(olr_test_nativevideoencoder PRIVATE "${CMAKE_SOURCE_DIR}" "${OLR_FFMPEG_INCLUDE}")
    target_link_directories(olr_test_nativevideoencoder PUBLIC "${OLR_FFMPEG_LIBDIR}")
    target_link_libraries(olr_test_nativevideoencoder
        PUBLIC Qt6::Core olr_test_engine
        PRIVATE "${OLR_FFMPEG_AVUTIL_LIBRARY}" mfplat mf mfuuid mfreadwrite strmiids ole32)
    target_link_libraries(tst_nativevideoencoder PRIVATE olr_test_nativevideoencoder)
elseif(NOT WIN32)
    add_library(olr_test_nativevideoencoder STATIC
        "${CMAKE_SOURCE_DIR}/recorder_engine/codec/nativevideoencoder_stub.cpp")
    target_include_directories(olr_test_nativevideoencoder PRIVATE "${CMAKE_SOURCE_DIR}")
    target_link_libraries(olr_test_nativevideoencoder PUBLIC Qt6::Core olr_test_engine)
    target_link_libraries(tst_nativevideoencoder PRIVATE olr_test_nativevideoencoder)
endif()
olr_add_unit_test(tst_h264_roundtrip olr_test_engine)
target_link_libraries(tst_h264_roundtrip PRIVATE olr_test_nativevideoencoder)
olr_add_unit_test(tst_vtiosurface olr_test_engine)
target_link_libraries(tst_vtiosurface PRIVATE
    olr_test_nativevideoencoder
    olr_test_nativevideodecoder)
olr_add_unit_test(tst_realcodecbenchmark olr_test_engine)
target_link_libraries(tst_realcodecbenchmark PRIVATE olr_test_nativevideoencoder olr_test_nativevideodecoder)
olr_add_unit_test(tst_benchmarkcache olr_test_engine)
olr_add_unit_test(tst_recordgate olr_test_engine)

if(OLR_GPU_PIPELINE)
    olr_add_unit_test(tst_shadertoolchain olr_test_gpu)
    olr_add_unit_test(tst_gpurhicontext olr_test_playback olr_test_gpu)
    olr_add_unit_test(tst_gpuframedata olr_test_playback olr_test_gpu)
    olr_add_unit_test(tst_decodedonefence olr_test_gpu)
    olr_add_unit_test(tst_gpufence olr_test_gpu)
    olr_add_unit_test(tst_gpugeneration olr_test_playback olr_test_gpu)
    olr_add_unit_test(tst_evictionguard olr_test_playback)
    olr_add_unit_test(tst_stagingfence olr_test_playback olr_test_gpu)
    olr_add_unit_test(tst_gpu_sync_stress olr_test_playback olr_test_gpu)
    olr_add_unit_test(tst_gpu_microstress olr_test_playback)
    olr_add_unit_test(tst_gpucompositor olr_test_playback olr_test_gpu)
    olr_add_unit_test(tst_gpucompositor_stress olr_test_playback olr_test_gpu)
    target_link_libraries(tst_outputbusengine PRIVATE olr_test_gpu)
endif()
